--- a/me632/me632.html
+++ b/me632/me632.html
@@ -72,7 +72,7 @@ br
   </tr>
   <tr> 
     <td>Januray 25, 2021</td> 
-    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me632/lec5.pdf" target="_blank">Lecture 5,
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me632/lec5.pdf" target="_blank">Lecture 5
       <p> <a href = "https://anshulfy.github.io/course_webpage/me632/ps1.pdf" target="_blank"> Problem Set 1 </p></td>
   </tr>
 <!--  <tr> 
