--- a/me632/me632.html
+++ b/me632/me632.html
@@ -75,6 +75,10 @@ br
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me632/lec5.pdf" target="_blank">Lecture 5
       <p> <a href = "https://anshulfy.github.io/course_webpage/me632/ps1.pdf" target="_blank"> Problem Set 1 </p></td>
   </tr>
+  <tr> 
+    <td>Januray 27, 2021</td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me632/lec6.pdf" target="_blank">Lecture 6</td> 
+  </tr>   
 <!--  <tr> 
     <td>August 19, 2020</td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec6.pdf" target="_blank">Lecture 6</td>
