--- a/me632/me632.html
+++ b/me632/me632.html
@@ -81,8 +81,12 @@ br
   </tr>   
   <tr> 
     <td>February 08, 2021</td> 
-    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me632/lec7.pdf" target="_blank">Lecture 6</td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me632/lec7.pdf" target="_blank">Lecture 7</td> 
   </tr>   
+  <tr> 
+    <td>February 10, 2021</td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me632/lec8.pdf" target="_blank">Lecture 8</td> 
+  </tr>
 <!--  <tr> 
     <td>August 19, 2020</td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec6.pdf" target="_blank">Lecture 6</td>
