--- a/me232/me232.html
+++ b/me232/me232.html
@@ -66,8 +66,8 @@ br
   <tr> <td>January 29, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec8.pdf" target="_blank">Lecture 8</td>  </tr>
   <tr> <td>February 05, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec9.pdf" target="_blank">Lecture 9</td>  </tr>
   <tr> <td>February 09, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec10.pdf" target="_blank">Lecture 10</td>  </tr>
-<!--   <tr> <td>Spetember 04, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec11.pdf" target="_blank">Lecture 11</td>  </tr>
-  <tr> <td>Spetember 08, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec12.pdf" target="_blank">Lecture 12</td>  </tr>
+  <tr> <td>Februaryr 14, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec11.pdf" target="_blank">Lecture 11</td>  </tr>
+<!--    <tr> <td>Spetember 08, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec12.pdf" target="_blank">Lecture 12</td>  </tr>
   <tr> <td>Spetember 11, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec13.pdf" target="_blank">Lecture 13</td>  </tr>
   <tr> <td>Spetember 15, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec14.pdf" target="_blank">Lecture 14</td>  </tr>
   <tr> <td>Spetember 18, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec15.pdf" target="_blank">Lecture 15</td>  </tr>
