--- a/me232/me232.html
+++ b/me232/me232.html
@@ -97,9 +97,10 @@ br
 <td style="border: 0px solid #000000;">
 <p style="font-size:25px; font-weight: bold"> Tutorial Problems: <p>
 <table  class="table2">
-  <tr> <td>Tutorial 1</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/tuto1.pdf" target="_blank"> Link</td> </tr>   <tr> <td>Tutorial 2</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto2.pdf" target="_blank">Link</td>  </tr>
+  <tr> <td>Tutorial 1</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/tuto1.pdf" target="_blank"> Link</td> </tr>   
   <tr> <td>Tutorial 2</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/tuto2.pdf" target="_blank">Link</td>  </tr>
-<!--  <tr> <td>Tutorial 4</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto4.pdf" target="_blank">Link</td>  </tr>
+<!--  <tr> <td>Tutorial 3</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/tuto3.pdf" target="_blank">Link</td>  </tr>
+  <tr> <td>Tutorial 4</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto4.pdf" target="_blank">Link</td>  </tr>
   <tr> <td>Tutorial 5</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto5.pdf" target="_blank">Link</td>  </tr>
   <tr> <td>Tutorial 6  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto6.pdf" target="_blank">Link</td>  </tr>
 -->
