--- a/me632/me632.html
+++ b/me632/me632.html
@@ -95,6 +95,10 @@ br
     <td>February 24, 2021</td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me632/lec10.pdf" target="_blank">Lecture 10</td> 
   </tr>
+  <tr> 
+    <td>March 01, 2021</td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me632/lec11.pdf" target="_blank">Lecture 11</td> 
+  </tr>
 <!--  <tr> 
     <td>August 19, 2020</td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec6.pdf" target="_blank">Lecture 6</td>
