--- a/me232/me232.html
+++ b/me232/me232.html
@@ -69,7 +69,9 @@ br
   <tr> <td>February 14, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec11.pdf" target="_blank">Lecture 11</td>  </tr>
   <tr> <td>February 23, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec12.pdf" target="_blank">Lecture 12</td>  </tr>
   <tr> <td>February 26, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec13.pdf" target="_blank">Lecture 13</td>  </tr>
-<!--  <tr> <td>Spetember 15, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec14.pdf" target="_blank">Lecture 14</td>  </tr>
+  <tr> <td>March 02, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec14.pdf" target="_blank">Lecture 14</td>  </tr>
+
+  <!--  <tr> <td>Spetember 15, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec14.pdf" target="_blank">Lecture 14</td>  </tr>
   <tr> <td>Spetember 18, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec15.pdf" target="_blank">Lecture 15</td>  </tr>
   <tr> <td>Spetember 27, 2020 </td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec16.pdf" target="_blank">Lecture 16
         <p> <a href = "https://youtu.be/3kzheGQI1jI" target="_blank">Video1, <a href = "https://youtu.be/EEB996WT0dU" target="_blank">Video2</p></td>  
@@ -99,8 +101,8 @@ br
 <table  class="table2">
   <tr> <td>Tutorial 1</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/tuto1.pdf" target="_blank"> Link</td> </tr>   
   <tr> <td>Tutorial 2</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/tuto2.pdf" target="_blank">Link</td>  </tr>
-<!--  <tr> <td>Tutorial 3</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/tuto3.pdf" target="_blank">Link</td>  </tr>
-  <tr> <td>Tutorial 4</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto4.pdf" target="_blank">Link</td>  </tr>
+  <tr> <td>Tutorial 3</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/tuto3.pdf" target="_blank">Link</td>  </tr>
+<!--    <tr> <td>Tutorial 4</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto4.pdf" target="_blank">Link</td>  </tr>
   <tr> <td>Tutorial 5</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto5.pdf" target="_blank">Link</td>  </tr>
   <tr> <td>Tutorial 6  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto6.pdf" target="_blank">Link</td>  </tr>
 -->
