--- a/me632/me632.html
+++ b/me632/me632.html
@@ -99,7 +99,11 @@ br
     <td>March 01, 2021</td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me632/lec11.pdf" target="_blank">Lecture 11</td> 
   </tr>
-<!--  <tr> 
+  <tr> 
+    <td>March 03, 2021</td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me632/lec12.pdf" target="_blank">Lecture 12</td> 
+  </tr>
+    <!--  <tr> 
     <td>August 19, 2020</td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec6.pdf" target="_blank">Lecture 6</td>
     <td style="text-align: center;"> <a href = "https://cdotmeetings.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1597827243048" target="_blank">Recorded Lecture</td>
