--- a/me232/me232.html
+++ b/me232/me232.html
@@ -71,6 +71,7 @@ br
   <tr> <td>February 26, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec13.pdf" target="_blank">Lecture 13</td>  </tr>
   <tr> <td>March 02, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec14.pdf" target="_blank">Lecture 14</td>  </tr>
   <tr> <td>March 05, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec15.pdf" target="_blank">Lecture 15</td>  </tr>
+  <tr> <td>March 16, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec16.pdf" target="_blank">Lecture 16</td>  </tr>
 
   <!--  <tr> <td>Spetember 15, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec14.pdf" target="_blank">Lecture 14</td>  </tr>
   <tr> <td>Spetember 18, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec15.pdf" target="_blank">Lecture 15</td>  </tr>
