--- a/me632/me632.html
+++ b/me632/me632.html
@@ -104,6 +104,10 @@ br
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me632/lec12.pdf" target="_blank">Lecture 12
       <p> <a href = "https://anshulfy.github.io/course_webpage/me632/ps2.pdf" target="_blank"> Problem Set 2 </p></td></td> 
   </tr>
+  <tr> 
+    <td>March 17, 2021</td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me632/lec13.pdf" target="_blank">Lecture 13</td> 
+  </tr>
     <!--  <tr> 
     <td>August 19, 2020</td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec6.pdf" target="_blank">Lecture 6</td>
