--- a/me232/me232.html
+++ b/me232/me232.html
@@ -75,6 +75,7 @@ br
   <tr> <td>March 19, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec17.pdf" target="_blank">Lecture 17</td>  </tr>
   <tr> <td>March 23, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec18.pdf" target="_blank">Lecture 18</td>  </tr>
   <tr> <td>March 26, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec19.pdf" target="_blank">Lecture 19</td>  </tr>
+  <tr> <td>April 06, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec19.pdf" target="_blank">Lecture 20</td>  </tr>
 
   <!--  <tr> <td>Spetember 15, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec14.pdf" target="_blank">Lecture 14</td>  </tr>
   <tr> <td>Spetember 18, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec15.pdf" target="_blank">Lecture 15</td>  </tr>
