--- a/me232/me232.html
+++ b/me232/me232.html
@@ -113,7 +113,8 @@ br
   <tr> <td>Tutorial 3</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/tuto3.pdf" target="_blank">Link</td>  </tr>
   <tr> <td>Tutorial 4</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/tuto4.pdf" target="_blank">Link</td>  </tr>
   <tr> <td>Tutorial 5</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/tuto5.pdf" target="_blank">Link</td>  </tr>
-<!--  <tr> <td>Tutorial 6  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto6.pdf" target="_blank">Link</td>  </tr>
+  <tr> <td>Tutorial 6</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/tuto6.pdf" target="_blank">Link</td>  </tr>
+  <!--  <tr> <td>Tutorial 6  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto6.pdf" target="_blank">Link</td>  </tr>
 -->
 </table>
 </td>
