--- a/me232/me232.html
+++ b/me232/me232.html
@@ -79,6 +79,7 @@ br
   <tr> <td>April 09, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec21.pdf" target="_blank">Lecture 21</td>  </tr>
   <tr> <td>April 13, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec22.pdf" target="_blank">Lecture 22</td>  </tr>
   <tr> <td>April 16, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec23.pdf" target="_blank">Lecture 23</td>  </tr>
+  <tr> <td>April 20 and 23, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec24_25.pdf" target="_blank">Lecture 24 and 25</td>  </tr>
 
   <!--  <tr> <td>Spetember 15, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec14.pdf" target="_blank">Lecture 14</td>  </tr>
   <tr> <td>Spetember 18, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec15.pdf" target="_blank">Lecture 15</td>  </tr>
