--- a/me232/me232.html
+++ b/me232/me232.html
@@ -115,6 +115,7 @@ br
   <tr> <td>Tutorial 4</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/tuto4.pdf" target="_blank">Link</td>  </tr>
   <tr> <td>Tutorial 5</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/tuto5.pdf" target="_blank">Link</td>  </tr>
   <tr> <td>Tutorial 6</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/tuto6.pdf" target="_blank">Link</td>  </tr>
+  <tr> <td>Tutorial 7</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/tuto7.pdf" target="_blank">Link</td>  </tr>
   <!--  <tr> <td>Tutorial 6  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto6.pdf" target="_blank">Link</td>  </tr>
 -->
 </table>
