--- a/me231/me231_21-22-M.html
+++ b/me231/me231_21-22-M.html
@@ -56,7 +56,7 @@ br
 <table class="table1">
   <tr> <td>Spetember 28, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec1.pdf" target="_blank"> Lecture 1</td> </tr>
   <tr> <td>Spetember 30, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec2.pdf" target="_blank">Lecture 2</td>  </tr>
-<--  <tr> <td>August 4, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec3.pdf" target="_blank">Lecture 3</td>  </tr>
+<!--  <tr> <td>August 4, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec3.pdf" target="_blank">Lecture 3</td>  </tr>
   <tr> <td>August 7, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec4.pdf" target="_blank"> Lecture 4</td> </tr>
   <tr> <td>August 11, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec5.pdf" target="_blank">Lecture 5</td>  </tr>
   <tr> <td>August 14, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec6.pdf" target="_blank">Lecture 6</td>  </tr>
