--- a/me231/me231_21-22-M.html
+++ b/me231/me231_21-22-M.html
@@ -60,8 +60,8 @@ br
   <tr> <td>October 05, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec4.pdf" target="_blank"> Lecture 4</td> </tr>
   <tr> <td>October 07, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec5.pdf" target="_blank">Lecture 5</td>  </tr>
   <tr> <td>October 08, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec6.pdf" target="_blank">Lecture 6</td>  </tr>
-<!--  <tr> <td>August 18, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec7.pdf" target="_blank">Lecture 7</td>  </tr>
-  <tr> <td>August 21, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec8.pdf" target="_blank">Lecture 8</td>  </tr>
+  <tr> <td>October 12, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec7.pdf" target="_blank">Lecture 7</td>  </tr>
+<!--   <tr> <td>August 21, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec8.pdf" target="_blank">Lecture 8</td>  </tr>
   <tr> <td>August 24, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec9.pdf" target="_blank">Lecture 9</td>  </tr>
   <tr> <td>August 28, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec10.pdf" target="_blank">Lecture 10</td>  </tr>
   <tr> <td>Spetember 04, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec11.pdf" target="_blank">Lecture 11</td>  </tr>
