--- a/me231/me231_21-22-M.html
+++ b/me231/me231_21-22-M.html
@@ -62,8 +62,8 @@ br
   <tr> <td>October 08, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec6.pdf" target="_blank">Lecture 6</td>  </tr>
   <tr> <td>October 12, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec7.pdf" target="_blank">Lecture 7</td>  </tr>
   <tr> <td>October 14, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec8.pdf" target="_blank">Lecture 8</td>  </tr>
-<!--  <tr> <td>August 24, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec9.pdf" target="_blank">Lecture 9</td>  </tr>
-  <tr> <td>August 28, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec10.pdf" target="_blank">Lecture 10</td>  </tr>
+  <tr> <td>October 21, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec9.pdf" target="_blank">Lecture 9</td>  </tr>
+<!--  <tr> <td>August 28, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec10.pdf" target="_blank">Lecture 10</td>  </tr>
   <tr> <td>Spetember 04, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec11.pdf" target="_blank">Lecture 11</td>  </tr>
   <tr> <td>Spetember 08, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec12.pdf" target="_blank">Lecture 12</td>  </tr>
   <tr> <td>Spetember 11, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec13.pdf" target="_blank">Lecture 13</td>  </tr>
