--- a/me231/me231_21-22-M.html
+++ b/me231/me231_21-22-M.html
@@ -63,9 +63,9 @@ br
   <tr> <td>October 12, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec7.pdf" target="_blank">Lecture 7</td>  </tr>
   <tr> <td>October 14, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec8.pdf" target="_blank">Lecture 8</td>  </tr>
   <tr> <td>October 21, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec9.pdf" target="_blank">Lecture 9</td>  </tr>
-<!--  <tr> <td>August 28, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec10.pdf" target="_blank">Lecture 10</td>  </tr>
-  <tr> <td>Spetember 04, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec11.pdf" target="_blank">Lecture 11</td>  </tr>
-  <tr> <td>Spetember 08, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec12.pdf" target="_blank">Lecture 12</td>  </tr>
+  <tr> <td>October 28, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec10.pdf" target="_blank">Lecture 10</td>  </tr>
+  <tr> <td>October 29, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec11.pdf" target="_blank">Lecture 11</td>  </tr>
+<!--  <tr> <td>Spetember 08, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec12.pdf" target="_blank">Lecture 12</td>  </tr>
   <tr> <td>Spetember 11, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec13.pdf" target="_blank">Lecture 13</td>  </tr>
   <tr> <td>Spetember 15, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec14.pdf" target="_blank">Lecture 14</td>  </tr>
   <tr> <td>Spetember 18, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec15.pdf" target="_blank">Lecture 15</td>  </tr>
