--- a/me231/me231_21-22-M.html
+++ b/me231/me231_21-22-M.html
@@ -68,8 +68,8 @@ br
   <tr> <td>November 02, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec12.pdf" target="_blank">Lecture 12</td>  </tr>
   <tr> <td>November 05, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec13.pdf" target="_blank">Lecture 13</td>  </tr>
   <tr> <td>November 09, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec14.pdf" target="_blank">Lecture 14</td>  </tr>
-<!--  <tr> <td>Spetember 18, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec15.pdf" target="_blank">Lecture 15</td>  </tr>
-  <tr> <td>Spetember 27, 2020 </td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec16.pdf" target="_blank">Lecture 16
+  <tr> <td>November 09, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec15.pdf" target="_blank">Lecture 15</td>  </tr>
+<!--  <tr> <td>Spetember 27, 2020 </td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec16.pdf" target="_blank">Lecture 16
         <p> <a href = "https://youtu.be/3kzheGQI1jI" target="_blank">Video1, <a href = "https://youtu.be/EEB996WT0dU" target="_blank">Video2</p></td>  
   </tr>
   <tr> <td>Spetember 29, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec17.pdf" target="_blank">Lecture 17</td>  </tr>
