--- a/me231/me231_21-22-M.html
+++ b/me231/me231_21-22-M.html
@@ -70,8 +70,8 @@ br
   <tr> <td>November 09, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec14.pdf" target="_blank">Lecture 14</td>  </tr>
   <tr> <td>November 11, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec15.pdf" target="_blank">Lecture 15</td>  </tr>
   <tr> <td>November 12, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec16.pdf" target="_blank">Lecture 16 </td>  </tr>
-<!--    <tr> <td>Spetember 29, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec17.pdf" target="_blank">Lecture 17</td>  </tr>
-  <tr> <td>October 13, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec18.pdf" target="_blank">Lecture 18</td>  </tr>
+  <tr> <td>November 16, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec17.pdf" target="_blank">Lecture 17</td>  </tr>
+<!--  <tr> <td>October 13, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec18.pdf" target="_blank">Lecture 18</td>  </tr>
   <tr> <td>October 16, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec19.pdf" target="_blank">Lecture 19</td>  </tr>
   <tr> <td>October 20, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec20.pdf" target="_blank">Lecture 20</td>  </tr>
   <tr> <td>October 23, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec21.pdf" target="_blank">Lecture 21</td>  </tr>
