--- a/me231/me231_21-22-M.html
+++ b/me231/me231_21-22-M.html
@@ -71,9 +71,9 @@ br
   <tr> <td>November 11, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec15.pdf" target="_blank">Lecture 15</td>  </tr>
   <tr> <td>November 12, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec16.pdf" target="_blank">Lecture 16 </td>  </tr>
   <tr> <td>November 16, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec17.pdf" target="_blank">Lecture 17</td>  </tr>
-<!--  <tr> <td>October 13, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec18.pdf" target="_blank">Lecture 18</td>  </tr>
-  <tr> <td>October 16, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec19.pdf" target="_blank">Lecture 19</td>  </tr>
-  <tr> <td>October 20, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec20.pdf" target="_blank">Lecture 20</td>  </tr>
+  <tr> <td>November 23, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec18.pdf" target="_blank">Lecture 18</td>  </tr>
+  <tr> <td>November 25, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec19.pdf" target="_blank">Lecture 19</td>  </tr>
+<!--  <tr> <td>October 20, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec20.pdf" target="_blank">Lecture 20</td>  </tr>
   <tr> <td>October 23, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec21.pdf" target="_blank">Lecture 21</td>  </tr>
   <tr> <td>October 29, 2020 </td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec22.pdf" target="_blank">Lecture 22
     <p> <a href = "https://youtu.be/alMW1F_is-E" target="_blank">Video1 </p></td> 
