--- a/me231/me231_21-22-M.html
+++ b/me231/me231_21-22-M.html
@@ -76,10 +76,8 @@ br
   <tr> <td>November 26, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec20.pdf" target="_blank">Lecture 20</td>  </tr>
   <tr> <td>November 30, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec21.pdf" target="_blank">Lecture 21</td>  </tr>
   <tr> <td>December 02, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec22.pdf" target="_blank">Lecture 22</td> </tr>
-<!--  <tr> <td>November 01, 2020 </td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec23.pdf" target="_blank">Lecture 23
-   <p> <a href = "https://youtu.be/nv1axHGjeOk" target="_blank">Video1 </p></td> 
-  </tr>
-  <tr> <td>October 06, 2020 </td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec24.pdf" target="_blank">Lecture 24</td>  </tr>
+  <tr> <td>December 03, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec23.pdf" target="_blank">Lecture 23</td> </tr>
+<!--   <tr> <td>October 06, 2020 </td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec24.pdf" target="_blank">Lecture 24</td>  </tr>
   <tr> <td>October 09, 2020 </td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec25.pdf" target="_blank">Lecture 25</td>  </tr>
   <tr> <td>October 13, 2020 </td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec26.pdf" target="_blank">Lecture 26 
     <p> <a href = "https://anshulfy.github.io/course_webpage/moa.pdf" target="_blank">Moment of Area</p> </td></tr>
