--- a/me632/me632_21-22-W.html
+++ b/me632/me632_21-22-W.html
@@ -47,7 +47,7 @@ br
 <body>
   <p style="font-size:35px; font-weight: bold; text-align:center">Dr. Anshul Faye (IIT Bhilai)</p>
   <p style="font-size:25px; font-weight: bold; text-align:center">Semester: 2021-22-W</p>
-  <p style="font-size:30px; font-weight: bold; text-align:center; color:#0052cc">ME232: Dynamics</p>
+  <p style="font-size:30px; font-weight: bold; text-align:center; color:#0052cc">ME632: Fracture Mechanics</p>
 <hr style="height:2px;border-width:0;color:gray;background-color:#0052cc">
 <center>
 
