--- a/me232/me232_21-22-W.html
+++ b/me232/me232_21-22-W.html
@@ -64,6 +64,7 @@ br
   <tr> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec11.pdf" target="_blank">Lecture 11</td>  </tr>
   <tr> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec12.pdf" target="_blank">Lecture 12</td>  </tr>
   <tr> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec13_14.pdf" target="_blank">Lecture 13 and Lecture 14</td>  </tr>
+  <tr> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec15.pdf" target="_blank">Lecture 15</td>  </tr>
   <!--  <tr> <td>October 05, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec4.pdf" target="_blank"> Lecture 4</td> </tr>
   <tr> <td>October 07, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec5.pdf" target="_blank">Lecture 5</td>  </tr>
   <tr> <td>October 08, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec6.pdf" target="_blank">Lecture 6</td>  </tr>
