--- a/me632/me632_21-22-W.html
+++ b/me632/me632_21-22-W.html
@@ -59,7 +59,8 @@ br
   <tr> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me632/lec2.pdf" target="_blank">Lecture 2</td>  </tr>
   <tr> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me632/lec3.pdf" target="_blank">Lecture 3</td>  </tr>
   <tr> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me632/lec4.pdf" target="_blank">Lecture 4</td>  </tr>
-<!--   <tr> <td>October 01, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec3.pdf" target="_blank">Lecture 3</td>  </tr>
+  <tr> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me632/lec5_6_7.pdf" target="_blank">Lecture 5, 6, 7</td>  </tr>
+  <!--   <tr> <td>October 01, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec3.pdf" target="_blank">Lecture 3</td>  </tr>
   <tr> <td>October 05, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec4.pdf" target="_blank"> Lecture 4</td> </tr>
   <tr> <td>October 07, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec5.pdf" target="_blank">Lecture 5</td>  </tr>
   <tr> <td>October 08, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec6.pdf" target="_blank">Lecture 6</td>  </tr>
