--- a/me232/me232_21-22-W.html
+++ b/me232/me232_21-22-W.html
@@ -68,6 +68,7 @@ br
   <tr> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec16.pdf" target="_blank">Lecture 16</td>  </tr>
   <tr> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec17_18.pdf" target="_blank">Lecture 17 and 18</td>  </tr>
   <tr> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec19.pdf" target="_blank">Lecture 19</td>  </tr>
+  <tr> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec20.pdf" target="_blank">Lecture 20</td>  </tr>
   <!--  <tr> <td>October 05, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec4.pdf" target="_blank"> Lecture 4</td> </tr>
   <tr> <td>October 07, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec5.pdf" target="_blank">Lecture 5</td>  </tr>
   <tr> <td>October 08, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231/lec6.pdf" target="_blank">Lecture 6</td>  </tr>
